Updated tmux conf for catppuccin

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -1,15 +1,16 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'fcsonline/tmux-thumbs'
-set -g @plugin 'arcticicestudio/nord-tmux'
-#set -g @plugin 'catppuccin/tmux#v1.0.3'
+set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
-#set -g @catppuccin_flavor 'mocha'
+set -g @catppuccin_flavor 'frappe'
 #set -g @catppuccin_window_status_style "none"
 #set -g @catppuccin_status_left_separator "█"
 #set -g @catppuccin_status_right_separator "█"
+
+run ~/.tmux/plugins/tmux/catppuccin.tmux
 
 set -g mouse on
 
@@ -32,9 +33,6 @@ set -g clock-mode-style 12
 
 set -ga word-separators ",│`|:\"' ()[]{}<>"
 
-set -wg status-left-length 256
-set -wg status-right-length 256
-
 set -g @resurrect-save 'S'
 set -g @resurrect-restore 'R'
 
@@ -45,15 +43,15 @@ bind c new-window -c '#{pane_current_path}'
 bind -T copy-mode-vi 'v' send -X begin-selection
 bind -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
-bind-key M choose-tree -Zw "join-pane -t '%%'"
-bind-key C-m choose-tree -Zs "join-pane -t '%%'"
+#bind-key M choose-tree -Zw "join-pane -t '%%'"
+#bind-key C-m choose-tree -Zs "join-pane -t '%%'"
 
 set -g bell-action none
 set -g visual-bell off
 
 set-option -g history-limit 20000
 
-set -g @thumbs-command 'echo -n {} | xclip -sel clip'
+set -g @thumbs-command 'echo -n {} | clip.exe'
 set -g @thumbs-contrast 1
 set -g @thumbs-regexp-1 '[a-z0-9\.]+@[a-z]+\.(?:com|net|org|edu|io)' # Match emails
 set -g @thumbs-regexp-2 '[a-f0-9]{2}:[a-f0-9]{2}:[a-f0-9]{2}:[a-f0-9]{2}:[a-f0-9]{2}:[a-f0-9]{2}:' # Match Mac Addresses
@@ -62,7 +60,6 @@ set -g @thumbs-regexp-4 '[a-f0-9]{8,64}' # Match arbitrary hashes
 set -g @thumbs-regexp-5 'Vlan\d+' # match Vlan interface on network devices
 set -g @thumbs-regexp-6 "Vlan\\d+" # alternative method of defining regexp
 set -g @thumbs-regexp-7 Vlan\\d+ # alternative method of defining regexp
-
 
 unbind r
 bind r source-file ~/.tmux.conf
@@ -85,15 +82,8 @@ bind -T copy-mode-vi 'C-h' select-pane -L
 bind -T copy-mode-vi 'C-j' select-pane -D
 bind -T copy-mode-vi 'C-k' select-pane -U
 bind -T copy-mode-vi 'C-l' select-pane -R
-#bind -T copy-mode-vi 'C-\' select-pane -l
 
 bind -n C-M-l send-keys C-l
-
-#bind M-v choose-buffer
-
-# TODO: These aren't working... Have to use C-b p/n for prev/next
-#bind C-Tab next-window
-#bind C-S-Tab previous-window
 
 bind-key C-u copy-mode -u
 
@@ -107,26 +97,25 @@ bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
+set -gF window-status-format "#[bg=#{@ctp_surface_1},fg=#{@ctp_fg}] ##I ##T "
+set -gF window-status-current-format "#[bg=#{@ctp_mauve},fg=#{@ctp_crust}] ##I ##T "
+
 # If statements: #{?condition,TRUE,FALSE}
 # Inside an if statement, you can't use comma to combine style blocks (those #[] sections),
 # so just create multiple next to each other.
 # Escaping comma doesn't work (ie: \,)
-set status-right "#{?client_prefix,#[bold]#[fg=cyan]#[fg=black]#[bg=cyan]#[bg=cyan] Prefix #[fg=brightblack]#[bg=cyan],#[bg-black]}#{prefix_highlight}#[fg=brightblack,nobold]#[fg=white,bg=brightblack] %A, %b %d #[fg=white,bg=brightblack]#[fg=white,bg=brightblack] %l:%M %p #[fg=cyan,bg=brightblack]#[fg=black,bg=cyan,bold] #H "
+#set status-right "#{?client_prefix,#[bold]#[fg=cyan]#[fg=black]#[bg=cyan]#[bg=cyan] Prefix #[fg=brightblack]#[bg=cyan],#[bg-black]}#{prefix_highlight}#[fg=brightblack,nobold]#[fg=white,bg=brightblack] %A, %b %d #[fg=white,bg=brightblack]#[fg=white,bg=brightblack] %l:%M %p #[fg=cyan,bg=brightblack]#[fg=black,bg=cyan,bold] #H "
 
-# set -g status-left ""
-# set -g  status-right "#{E:@catppuccin_status_application}"
-# set -ag status-right "#{E:@catppuccin_status_session}"
-# set -ag status-right "#{E:@catppuccin_status_user}"
-# set -ag status-right "#{E:@catppuccin_status_host}"
-# set -ag status-right "#{E:@catppuccin_status_date_time}"
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application}"
+set -agF status-right "#{E:@catppuccin_status_cpu}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+set -ag status-right "#{E:@catppuccin_status_uptime}"
 
-#run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
-# For TPM, instead use `run ~/.config/tmux/plugins/tmux/catppuccin.tmux`
-
-# Make the status line pretty and add some modules
-#set -g status-left ""
-#set -g status-right "#{E:@catppuccin_status_user}"
-#set -ag status-right "#{E:@catppuccin_status_directory}"
+set -g @catppuccin_window_status_style "slanted"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
