Update tmux window to support naming

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -6,9 +6,6 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 set -g @catppuccin_flavor 'frappe'
-#set -g @catppuccin_window_status_style "none"
-#set -g @catppuccin_status_left_separator "█"
-#set -g @catppuccin_status_right_separator "█"
 
 run ~/.tmux/plugins/tmux/catppuccin.tmux
 
@@ -97,14 +94,10 @@ bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
-set -gF window-status-format "#[bg=#{@ctp_surface_1},fg=#{@ctp_fg}] ##I ##T "
-set -gF window-status-current-format "#[bg=#{@ctp_mauve},fg=#{@ctp_crust}] ##I ##T "
-
-# If statements: #{?condition,TRUE,FALSE}
-# Inside an if statement, you can't use comma to combine style blocks (those #[] sections),
-# so just create multiple next to each other.
-# Escaping comma doesn't work (ie: \,)
-#set status-right "#{?client_prefix,#[bold]#[fg=cyan]#[fg=black]#[bg=cyan]#[bg=cyan] Prefix #[fg=brightblack]#[bg=cyan],#[bg-black]}#{prefix_highlight}#[fg=brightblack,nobold]#[fg=white,bg=brightblack] %A, %b %d #[fg=white,bg=brightblack]#[fg=white,bg=brightblack] %l:%M %p #[fg=cyan,bg=brightblack]#[fg=black,bg=cyan,bold] #H "
+# Renaming
+set-option -g automatic-rename on
+set-option -g automatic-rename-format "#{b:pane_current_path}: #{pane_current_command}"
+set-option -g allow-rename off
 
 set -g status-right-length 100
 set -g status-left-length 100
@@ -115,6 +108,9 @@ set -ag status-right "#{E:@catppuccin_status_session}"
 set -ag status-right "#{E:@catppuccin_status_uptime}"
 
 set -g @catppuccin_window_status_style "slanted"
+
+set -g @catppuccin_window_text " #{?#{==:#{window_name},#{automatic-rename-format}},#{b:pane_current_path}: #{pane_current_command},#{window_name}}"
+set -g @catppuccin_window_current_text " #{?#{==:#{window_name},#{automatic-rename-format}},#{b:pane_current_path}: #{pane_current_command},#{window_name}}"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
