--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -98,6 +98,7 @@ bind -n M-l select-pane -R
 set-option -g automatic-rename on
 set-option -g automatic-rename-format "#{b:pane_current_path}: #{pane_current_command}"
 set-option -g allow-rename off
+set-option -g renumber-windows on
 
 set -g status-right-length 100
 set -g status-left-length 100
