Reorganize zshrc, tmux,

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -5,7 +5,7 @@ set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
-set -g @catppuccin_flavor 'frappe'
+set -g @catppuccin_flavor 'macchiato'
 
 run ~/.tmux/plugins/tmux/catppuccin.tmux
 
@@ -13,6 +13,9 @@ set -g mouse on
 
 set-option -gw xterm-keys on
 set-option -gw mode-keys vi
+
+set -s extended-keys on
+set -as terminal-features 'tmux*:extkeys'
 
 #set -g default-terminal "screen-256color"
 set -g default-terminal "tmux-256color"
