Fix clipboard/tmux buffer

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -51,7 +51,7 @@ set -g visual-bell off
 
 set-option -g history-limit 20000
 
-set -g @thumbs-command 'echo -n {} | clip.exe'
+set -g @thumbs-command 'tmux set-buffer -- {} && echo -n {} | /mnt/c/Windows/System32/clip.exe'
 set -g @thumbs-contrast 1
 set -g @thumbs-regexp-1 '[a-z0-9\.]+@[a-z]+\.(?:com|net|org|edu|io)' # Match emails
 set -g @thumbs-regexp-2 '[a-f0-9]{2}:[a-f0-9]{2}:[a-f0-9]{2}:[a-f0-9]{2}:[a-f0-9]{2}:[a-f0-9]{2}:' # Match Mac Addresses
