tmux cursor color fix

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -10,6 +10,7 @@ set -g @catppuccin_flavor 'macchiato'
 run ~/.tmux/plugins/tmux/catppuccin.tmux
 
 set -g mouse on
+set -g cursor-colour white
 
 set-option -gw xterm-keys on
 set-option -gw mode-keys vi
