tmux show copy-mode in the status line

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -43,6 +43,8 @@ bind c new-window -c '#{pane_current_path}'
 
 bind -T copy-mode-vi 'v' send -X begin-selection
 bind -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+bind -T copy-mode-vi 'J' send -X halfpage-down
+bind -T copy-mode-vi 'K' send -X halfpage-up
 
 #bind-key M choose-tree -Zw "join-pane -t '%%'"
 #bind-key C-m choose-tree -Zs "join-pane -t '%%'"
@@ -69,6 +71,7 @@ bind r source-file ~/.tmux.conf
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+
 bind -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
 bind -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
 bind -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
@@ -107,7 +110,8 @@ set-option -g renumber-windows on
 set -g status-right-length 100
 set -g status-left-length 100
 set -g status-left ""
-set -g status-right "#{E:@catppuccin_status_application}"
+set -g status-right "#{?pane_in_mode,#[fg=#{@thm_crust}]#[bg=#{@thm_blue}] COPY #[default] ,}"
+set -ag status-right "#{E:@catppuccin_status_application}"
 set -agF status-right "#{E:@catppuccin_status_cpu}"
 set -ag status-right "#{E:@catppuccin_status_session}"
 set -ag status-right "#{E:@catppuccin_status_uptime}"
